--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         
         
     </div>
+  <footer class="footer bg-dark py-2">
+    <div class="container text-center">
+     <p class="text-white">Designed & developed by India.&copy;</p> 
+    </div>
+  </footer>
     <script src ="app.js"></script> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
