--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
   <footer class="footer bg-dark py-2">
     <div class="container text-center">
-     <p class="text-white">Designed & developed by India.&copy;</p> 
+     <p class="text-white">Designed and Developed by Harsh Shah.&copy;</p> 
     </div>
   </footer>
     <script src ="app.js"></script> 
